[package]
name = "webauthn-rp-proxy"
authors = ["Arthur A. Gleckler <aag@alum.mit.edu>"]
readme = "README.md"
description = "Webauthn RP CLI Proxy"

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = "1.0"
clap = { version = "3.0", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde"] }
webauthn-rs = { workspace = true, features = ["danger-allow-state-serialisation"] }
