[package]
name = "webauthn-rs-core"
version = "0.5.0-dev"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2021"
rust-version = "1.66.0"
description = "Webauthn Cryptographic Operation Handling"
repository = "https://github.com/kanidm/webauthn-rs"
readme = "README.md"
keywords = ["webauthn", "authentication"]
categories = ["authentication", "web-programming"]
license = "MPL-2.0"

[features]
default = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
base64.workspace = true
base64urlsafedata.workspace = true
webauthn-rs-proto.workspace = true
schemars.workspace = true
serde.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
nom.workspace = true
thiserror.workspace = true
tracing.workspace = true
openssl.workspace = true
# We could consider replacing this with openssl rand.
rand.workspace = true
url = { workspace = true, features = ["serde"] }
x509-parser = "0.13.0"
der-parser = "7.0.0"
compact_jwt.workspace = true
uuid = { workspace = true, features = ["serde"] }

[dev-dependencies]
hex-literal = "0.3"
tracing-subscriber.workspace = true
