[package]
name = "webauthn-rs-demo"
version = "0.1.0"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2021"
build = "build.rs"

description = "Webauthn Demonstration Server"
repository = "https://github.com/kanidm/webauthn-rs"
readme = "README.md"
license = "MPL-2.0"

[dependencies]
webauthn-rs = { path = "../webauthn-rs" }
askama = "0.11"
tide = "0.16"
tide-rustls = "0.3"
askama_tide = "0.14"
async-std = { version = "1.6", features = ["attributes"] }
openssl = "0.10"
lru = "0.7"
structopt = { version = "0.3", default-features = false }
rustls = "0.19.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"

