[package]
name = "webauthn-rs-proto"
version = "0.4.2-beta.3"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2021"
description = "Webauthn Specification Bindings"
repository = "https://github.com/kanidm/webauthn-rs"
readme = "../README.md"
keywords = ["webauthn", "authentication"]
categories = ["authentication", "web-programming"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wasm = ["wasm-bindgen", "web-sys", "js-sys"]

[dependencies]
base64urlsafedata = { version = "0.1", path = "../base64urlsafedata" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
url = { version = "2", features = ["serde"] }
# num_enum = "0.5"

# Webauthn Components
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }
js-sys = { version = "0.3", optional = true }

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
    "CredentialCreationOptions",
    "CredentialRequestOptions",
    "PublicKeyCredential",
    "PublicKeyCredentialCreationOptions",
    "AuthenticationExtensionsClientInputs",
    "AuthenticationExtensionsClientOutputs",
    "console",
]
