[package]
name = "webauthn-rs"
version = "0.4.8"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2021"
description = "Webauthn Framework for Rust Web Servers"
repository = "https://github.com/kanidm/webauthn-rs"
readme = "../README.md"
keywords = ["webauthn", "authentication"]
categories = ["authentication", "web-programming"]
license = "MPL-2.0"

[features]
resident-key-support = []
preview-features = []
danger-insecure-rs1 = ["webauthn-rs-core/insecure-rs1"]
danger-allow-state-serialisation = []
danger-credential-internals = []
danger-user-presence-only-security-keys = []

[dependencies]
base64urlsafedata = { version = "0.1", path = "../base64urlsafedata" }
webauthn-rs-core = { version = "0.4.8", path = "../webauthn-rs-core" }
url = { version = "2", features = ["serde"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
