[package]
name = "webauthn-rs"
description = "Webauthn Framework for Rust Web Servers"
readme = "../README.md"
keywords = ["webauthn", "authentication", "passkeys"]
categories = ["authentication", "web-programming"]

version = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
features = ["danger-allow-state-serialisation", "danger-user-presence-only-security-keys", "danger-credential-internals"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["attestation"]

preview-features = ["conditional-ui"]
resident-key-support = []
conditional-ui = []
attestation = []
workaround-google-passkey-specific-issues = []
danger-allow-state-serialisation = []
danger-credential-internals = []
danger-user-presence-only-security-keys = []

[dependencies]
base64urlsafedata.workspace = true
webauthn-rs-core.workspace = true
url = { workspace = true, features = ["serde"] }
tracing.workspace = true
serde.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
webauthn-rs-device-catalog.workspace = true
