[package]
name = "cable-tunnel-server-common"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true

clap.workspace = true
hex.workspace = true
http-body.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["server"] }
thiserror.workspace = true
tokio.workspace = true
tokio-native-tls.workspace = true
tokio-tungstenite.workspace = true
tungstenite.workspace = true
