[package]
name = "cable-tunnel-server-frontend"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
cable-tunnel-server-common.workspace = true

clap.workspace = true
hex.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["client", "server"] }
tokio.workspace = true
tokio-native-tls.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tungstenite.workspace = true
