[package]
name = "webauthn_rs_demo_wasm"
version = "0.1.0"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2021"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
webauthn-rs-demo-shared = { path = "../webauthn-rs-demo-shared", default-features = false }
webauthn-rs-proto = { path = "../../webauthn-rs-proto", default-features = false, features = ["wasm"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4" }
yew-router = "0.16.0"
yew = "0.19"
js-sys = "0.3"
serde_json = "^1.0.79"
gloo = "0.6"
url = "2"

[dependencies.web-sys]
version = "0.3"
features = [
    "AbortController",
    "AbortSignal",
    "AuthenticationExtensionsClientOutputs",
    "AuthenticatorResponse",
    "Clipboard",
    "CredentialCreationOptions",
    "CredentialRequestOptions",
    "CredentialsContainer",
    "Element",
    "Event",
    "Headers",
    "HtmlCollection",
    "HtmlSelectElement",
    "Navigator",
    "PublicKeyCredential",
    "PublicKeyCredentialCreationOptions",
    "PublicKeyCredentialRpEntity",
    "PublicKeyCredentialUserEntity",
    "Request",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Response",
    "Window",
]
