[package]
name = "webauthn-rs-demo"
version = "0.1.0"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2021"
build = "build.rs"

description = "Webauthn Demonstration Server"
repository = "https://github.com/kanidm/webauthn-rs"
readme = "README.md"
license = "MPL-2.0"

[dependencies]
webauthn-rs-demo-shared = { path = "../webauthn-rs-demo-shared", features = ["core"] }
webauthn-rs-core.workspace = true
webauthn-rs = { workspace = true, features = ["conditional-ui", "attestation", "resident-key-support", "danger-allow-state-serialisation"] }

tide = "0.16"
tokio.workspace = true

structopt = { version = "0.3", default-features = false }
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
url = { workspace = true , features = ["serde"] }

serde.workspace = true

webauthn-rs-device-catalog =  { workspace = true }
fido-mds = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = [ "rustls-tls-native-roots" ] }

[dependencies.tide-openssl]
git = "https://github.com/victorcwai/tide-openssl.git"
rev = "7d0e2215f2f1ebfa71aa30d132213ed45dd95cbf"
