[package]
name = "wasm"
version = "0.1.1"
edition = "2021"
rust-version = "1.70.0"
authors = ["William Brown <william@blackhats.net.au>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
webauthn-rs-proto = { workspace = true, features = ["wasm"] }

wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen-futures = { version = "0.4" }
yew = "0.19"
js-sys = "0.3"
gloo = "0.6"
url.workspace = true
serde_json.workspace = true

[dependencies.web-sys]
version = "0.3"
features = [
    "CredentialCreationOptions",
    "CredentialRequestOptions",
    "CredentialsContainer",
    "Navigator",
    "PublicKeyCredential",
    "PublicKeyCredentialCreationOptions",
]
