[package]
name = "tide_yew"
version = "0.1.0"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "^0.2"
yew = "0.17"
