[package]
name = "actix_tutorial"
version = "0.1.0"
edition = "2021"
authors = ["Niklas Pfister <git@omikron.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Webframework
actix-web = { version = ">=4.5.1" }
# Session framework for actix-web
actix-session = { version = "~0.10", features = ["cookie-session"] }

# Serve static file. Used to serve wasm
actix-files = { version = "~0.6" }


# Async trait, anyhow, chrono, and rand are required for the implementation of a
# server-side memory-backed session store.
# Normally, you want to use a database / redis backend as session store, but for the simplicity of this
# tutorial, we implement our own.
async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { version = "~0.4" }
rand = { workspace = true }

# Nicer error management
thiserror = { workspace = true }


# Async runtime
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true

# Webauthn framework
webauthn-rs = { workspace = true, features = [
    "danger-allow-state-serialisation",
] }
