[package]
name = "web_authn"
version = "0.1.0"
edition = "2021"
authors = ["William Brown <william@blackhats.net.au>, Ben Wishovich <ben@benw.is>"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
rand = {version="0.8", features=["min_const_gen"]}
webauthn-rs = { path = "../../../webauthn-rs" }
axum = {version = "0.5.11", features = ["http2"]}
tokio = {version="1.19.2", features = ["full"]}
uuid = {version="1.1.2", features=["v4"]}
url = "2.2.2"
thiserror = "1.0.31"
axum-sessions = "0.1.1"
tower = "0.4.13"
tower-http = {version="0.3.4", features=["fs"]}

