[package]
name = "tide_tutorial"
version = "0.1.0"
edition = "2021"
authors = ["William Brown <william@blackhats.net.au>"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webauthn-rs = { workspace = true, features = [
    "danger-allow-state-serialisation",
] }
tide = "0.16"
async-std = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
